[package]
name = "test-prefetch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
perf-event = "0.4.8"
rand = "0.8.5"
thousands = "0.2.0"

[patch.crates-io]
perf-event = { path = "./perf-event-patch/perf-event" }
